# chitchat_research

BloomierFilters/Scala-Cascade/: .gitignore  README.md  build.sbt
ChitChat/ChitchatCompilerRuby/: .gitignore  README.md  Rakefile  chitchat.gemspec
ChitChat/ChitchatCompilerRuby/lib/: chitchat.rb
ChitChat/ChitchatCompilerRuby/spec/: chitchat_spec.rb  spec_helper.rb
ChitChat/ChitchatCompilerScala/: .gitignore  build.sbt  readme.md
ChitChat/ChitchatVMScala/: .gitignore  build.sbt
Grapevine/Cpp/: .gitignore  README.md
Grapevine/Cpp/code/: CMakeLists.txt  main.cpp  size.py
Grapevine/Cpp/code/src/: contextHandler.cpp  contextHandler.h  contextShim.h  contextShimmedDatagramSocket.cpp  contextShimmedDatagramSocket.h  contextSummary.cpp  contextSummary.h  contextSummarySerializer.h  datagramContextShim.h  error.h  grapevine.h  groupContextSummary.cpp  groupContextSummary.h  groupDefinition.cpp  groupDefinition.h  serializer.cpp  serializer.h
Grapevine/Cpp/code/src/util/: groupUtils.cpp  groupUtils.h  serializerUtils.cpp  serializerUtils.h  util.cpp  util.h
Grapevine/Cpp/code/test/: test_contextHandler.cc  test_contextShim.cc  test_contextShimmedDatagramSocket.cc  test_contextSummary.cc  test_contextSummarySerializer.cc  test_datagramContextShim.cc  test_error.cc  test_groupContextSummary.cc  test_groupDefinition.cc  test_groupUtils.cc  test_network_broadcasting.cc  test_serializer.cc  test_serializerUtils.cc  test_util.cc
Grapevine/Python/: README.md  size.py
Research/Context-Sharing-Simulation-for-Chitchat-master/: .gitignore  README.md  build.sbt  link.sh  runtest.sh
Research/Efficient-Decentralized-Context-Sharing-via-Aggregation-Simulation-master/: .gitignore  README.md  codesize.py  config.cfg  test_config.txt  testall.sh
Research/Efficient-Decentralized-Context-Sharing-via-Aggregation-master/: .gitignore  README.md  codesize.py  configuration.py  generateGraphs.py  graphStatistics.py  massSimulate.py  parallelSimulation.py  result.txt  result.txt~  simulate.py  tree.txt
docs/: CNAME  index.html
(+13663 files in other folders)
